--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="author" content="mbey_koumatey"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="favicon.png">
+     <script src="https://kit.fontawesome.com/cf88953d74.js" crossorigin="anonymous"></script>
+         <title>Groupomania</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div> <!--notre application-->
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
